fix overflow

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -45,7 +45,7 @@
   }
 
   .footer {
-    padding: 24px 243px;
+    padding: 24px 32px;
   }
 
   .logo {
